@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'idea'
+//    id 'jacoco' // HERE!
 }
 
 java {
@@ -14,7 +15,7 @@ java {
 }
 
 
-group 'com.richard.agyei'
+group 'com.marketplace'
 version '1.0.0-SNAPSHOT'
 
 repositories {
@@ -32,6 +33,13 @@ sourceSets {
         compileClasspath += main.output + test.output
         runtimeClasspath += main.output + test.output
     }
+
+    functional {
+        java.srcDir "$projectDir/src/functional/groovy"
+        resources.srcDir "$projectDir/src/functional/resources"
+        compileClasspath += main.output + test.output
+        runtimeClasspath += main.output + test.output
+    }
 }
 
 configurations {
@@ -44,11 +52,21 @@ configurations {
     integrationRuntime {
         extendsFrom testRuntime
     }
+    functionalImplementation {
+        extendsFrom testImplementation
+    }
+    functionalRuntime {
+        extendsFrom testRuntime
+    }
 }
 
 
 dependencies {
     compile project(":config")
+    compile project(":common")
+
+    implementation("org.slf4j:slf4j-api:1.7.30")
+    implementation("org.slf4j:slf4j-log4j12:1.7.30")
 
     implementation("com.sparkjava:spark-core:2.9.3")
 
@@ -81,6 +99,8 @@ dependencies {
     testImplementation("org.mockito:mockito-junit-jupiter:${mockitoVersion}")
     testImplementation("org.testcontainers:junit-jupiter:1.15.0")
     testImplementation("org.testcontainers:mongodb:1.15.0")
+
+    functionalImplementation("org.spockframework:spock-core:1.3-groovy-2.5")
 
 }
 
@@ -117,12 +137,19 @@ task integrationTest(type: Test) {
     testClassesDirs = sourceSets.integration.output.classesDirs
     classpath = sourceSets.integration.runtimeClasspath
 }
-
-//tasks.withType(integrationTest) {
-//    jvmArgs += "--enable-preview"
-//}
+task functionalTest(type: Test) {
+    testClassesDirs = sourceSets.functional.output.classesDirs
+    classpath = sourceSets.functional.runtimeClasspath
+}
 
 integrationTest {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
+
+functionalTest {
     useJUnitPlatform()
     testLogging {
         events "passed", "skipped", "failed"
@@ -132,7 +159,6 @@ integrationTest {
 check.dependsOn integrationTest
 
 subprojects {
-
     repositories {
         mavenLocal()
         mavenCentral()
